--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -15,6 +15,8 @@ on:
         description: "Version to bump to"
         required: false
 
+  workflow_call:
+
 jobs:
   build:
     runs-on: ubuntu-latest
