--- a/.github/workflows/initialize-readme.yml
+++ b/.github/workflows/initialize-readme.yml
@@ -3,22 +3,9 @@ name: Initialize README
 on:
   workflow_dispatch:
 
-  workflow_call:
-
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Initialize README.md
-        run: |
-          pip install jinja2-cli
-          set -x
-          REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
-          jinja2 --strict -D repository_name=$REPOSITORY_NAME -D repository_owner=$GITHUB_REPOSITORY_OWNER ".github/workflows/repository-templates/README.md.j2" > README.md
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "docs(readme): initialize readme.md file"
+  uses: attilasomogyi/github-actions-workflows/.github/workflows/repository-template.yml@main
+  with:
+    jinja2-input-data: "-D repository_name=$REPOSITORY_NAME -D repository_owner=$GITHUB_REPOSITORY_OWNER"
+    jinja2-input-template-file: ".github/workflows/repository-templates/README.md.j2"
+    jinja2-input-output-file: "README.md"
