--- a/.github/workflows/initialize-readme.yml
+++ b/.github/workflows/initialize-readme.yml
@@ -9,5 +9,5 @@ jobs:
     with:
       jinja2-input-data: "-D repository_name=$REPOSITORY_NAME -D repository_owner=$GITHUB_REPOSITORY_OWNER"
       jinja2-input-template-file: ".github/workflows/repository-templates/README.md.j2"
-      jinja2-input-output-file: "README.md"
+      jinja2-output-file: "README.md"
       commit-message: "docs(readme): update readme"
