--- a/.github/workflows/initialize-code-of-conduct.yml
+++ b/.github/workflows/initialize-code-of-conduct.yml
@@ -10,4 +10,4 @@ jobs:
       jinja2-input-data: "-D repository_name=$REPOSITORY_NAME -D repository_owner=$GITHUB_REPOSITORY_OWNER"
       jinja2-input-template-file: ".github/workflows/repository-templates/CODE_OF_CONDUCT.md.j2"
       jinja2-output-file: "CODE_OF_CONDUCT.md"
-      commit-message: "doc(code_of_conduct): update code of conduct"
+      commit-message: "docs(code_of_conduct): update code of conduct"
