--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -31,6 +31,10 @@ jobs:
           REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
           jinja2 --strict ${{ inputs.jinja2-input-data }} ${{ inputs.jinja2-input-template-file }} > ${{ inputs.jinja2-output-file }}
 
+      - name: Pull Current Changes
+        run: |
+          git pull --rebase
+
       - name: Committing Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
