--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Pull Current Changes
         run: |
-          git pull --rebase
+          git pull --rebase --autostash
 
       - name: Committing Changes
         uses: stefanzweifel/git-auto-commit-action@v4
