--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -39,6 +39,6 @@ jobs:
         uses: actions/deploy-pages@v1
       - name: Setup Repository Home Page URL
         run: |
-          gh repo edit --homepage https://$GITHUB_REPOSITORY_OWNER.github.io/$(basename $GITHUB_REPOSITORY)/
+          gh repo edit $GITHUB_REPOSITORY --homepage "https://$GITHUB_REPOSITORY_OWNER.github.io/$(basename $GITHUB_REPOSITORY)/"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
