--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -30,12 +30,12 @@ jobs:
           pip install jinja2-cli
           REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
           jinja2 --strict ${{ inputs.jinja2-input-data }} ${{ inputs.jinja2-input-template-file }} > ${{ inputs.jinja2-output-file }}
-        shell: dash {0}
+        shell: dash -e {0}
 
       - name: Pull Current Changes
         run: |
           git pull --rebase --autostash
-        shell: dash {0}
+        shell: dash -e {0}
 
       - name: Committing Changes
         uses: stefanzweifel/git-auto-commit-action@v4
