--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Pyhton Cache
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: "3.9"
           cache: "pip"
