--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -19,6 +19,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Node Cache
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          cache: "npm"
+
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
     env:
