--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Node Cache
         uses: actions/setup-node@v3
         with:
-          node-version: latest
+          node-version: current
           cache: "npm"
 
       - name: Semantic Release
