fix(workflows): set lock file in node cache for auto-release

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Setup Node Package Lock File
+        run: |
+          npm i --package-lock-only
+        shell: dash -e {0}
+
       - name: Node Cache
         uses: actions/setup-node@v3
         with:
