fix(workflows): create package.json file in node cache for auto-release

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Setup Node Package Lock File
         run: |
+          npm init -y
           npm i --package-lock-only
         shell: dash -e {0}
 
