feat(workflows): add python cache for build documentations

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -29,6 +29,12 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - name: Pyhton Cache
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+          cache: "pip"
+
       - name: Build Documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
