--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -29,6 +29,8 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Pyhton Cache
         uses: actions/setup-python@v4
         with:
