fix(workflows): fix pull request path

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -18,6 +18,7 @@ on:
       - "docs/**"
       - "README.md"
       - "CODE_OF_CONDUCT.md"
+      - "CONTRIBUTING.md"
       - "CHANGELOG.md"
 
   workflow_dispatch:
