fix(releaserc): set only the main channel

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,6 @@
 {
   "branches": [
-      "main",
-      "^v(\\d+\\.)?(\\d+\\.)?(\\*|\\d+)$"
+      "main"
   ],
   "plugins": [
       "@semantic-release/commit-analyzer",
