--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Repository Template
         run: |
+          pip install --upgrade pip
           pip install jinja2-cli
           REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
           COMPONENTS=$(find . -type f  -not -path '*\.git\/*' -exec basename {} \; | sort --uniqu)
