fix(workflows): fix repository template jinja2 problems

--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -38,6 +38,7 @@ jobs:
           pip install jinja2-cli
           REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
           COMPONENTS=$(find . -type f  -not -path '*\.git\/*' -exec basename {} \; | sort --uniqu)
+          COMPONENTS=$(echo $COMPONENTS | sed -e 's/\s\+/,/g')
           LATEST_VERSION=$(git tag | sort --version-sort | tail -1)
           jinja2 --strict ${{ inputs.jinja2-input-data }} ${{ inputs.jinja2-input-template-file }} > ${{ inputs.jinja2-output-file }}
         shell: dash -e {0}
