ci(workflows): test repostiory template workflow

--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -33,12 +33,13 @@ jobs:
 
       - name: Repository Template
         run: |
-          set -x
           pip install --upgrade pip
           pip install jinja2-cli
           REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
           COMPONENTS=$(find . -type f  -not -path '*\.git\/*' -exec basename {} \; | sort --uniqu)
           COMPONENTS=$(echo $COMPONENTS | sed -e 's/\s\+/,/g')
+          set -x
+          git tag
           LATEST_VERSION=$(git tag | sort --version-sort | tail -1)
           jinja2 --strict ${{ inputs.jinja2-input-data }} ${{ inputs.jinja2-input-template-file }} > ${{ inputs.jinja2-output-file }}
         shell: dash -e {0}
