--- a/.github/workflows/repository-template.yml
+++ b/.github/workflows/repository-template.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Pyhton Cache
+      - name: Python Cache
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
@@ -38,9 +38,7 @@ jobs:
           REPOSITORY_NAME=$(basename $GITHUB_REPOSITORY)
           COMPONENTS=$(find . -type f  -not -path '*\.git\/*' -exec basename {} \; | sort --uniqu)
           COMPONENTS=$(echo $COMPONENTS | sed -e 's/\s\+/,/g')
-          set -x
-          git tag
-          LATEST_VERSION=$(git tag | sort --version-sort | tail -1)
+          LATEST_VERSION=$(git --no-pager tag | sort --version-sort | tail -1)
           jinja2 --strict ${{ inputs.jinja2-input-data }} ${{ inputs.jinja2-input-template-file }} > ${{ inputs.jinja2-output-file }}
         shell: dash -e {0}
 
