--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -22,5 +22,8 @@ jobs:
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
+
+      - name: Update Bug Report Template
+        uses: attilasomogyi/github-actions-workflows/.github/workflows/update-bug-report-template.yml@main
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
