feat(workflows): add udpate security.md workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -28,3 +28,7 @@ jobs:
   update-bug-report-template:
     needs: auto-release
     uses: attilasomogyi/github-actions-workflows/.github/workflows/update-bug-report-template.yml@main
+
+  update-security-template:
+    needs: auto-release
+    uses: attilasomogyi/github-action-workflows/.github/workflows/update-security.yml@main
