--- a/.github/workflows/update-security.yml
+++ b/.github/workflows/update-security.yml
@@ -3,6 +3,8 @@ name: Update SECURITY.md
 on:
   workflow_dispatch:
 
+  workflow_call:
+
 jobs:
   update-security:
     uses: attilasomogyi/github-actions-workflows/.github/workflows/repository-template.yml@main
