--- a/.github/workflows/delete-old-releases.yml
+++ b/.github/workflows/delete-old-releases.yml
@@ -23,6 +23,9 @@ jobs:
   delete-old-releases:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Delete Old Releases
         run: |
           if [ -n "${{ inputs.keep_latest }}" ]; then
