--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -10,6 +10,8 @@ on:
       - "CODE_OF_CONDUCT.md"
       - "CONTRIBUTING.md"
       - "CHANGELOG.md"
+      - "SECURITY.md"
+      - "SUPPORT.md"
 
   pull_request:
     branches:
@@ -20,6 +22,8 @@ on:
       - "CODE_OF_CONDUCT.md"
       - "CONTRIBUTING.md"
       - "CHANGELOG.md"
+      - "SECURITY.md"
+      - "SUPPORT.md"
 
   workflow_dispatch:
 
