--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -32,3 +32,7 @@ jobs:
   update-security:
     needs: auto-release
     uses: attilasomogyi/github-actions-workflows/.github/workflows/update-security.yml@main
+
+  build-documentation:
+    needs: [update-bug-report-template, update-security]
+    uses: attilasomogyi/github-actions-workflows/.github/workflows/build-documentation.yml@main
