fix(workflows): set release type published in delete old release workflow

--- a/.github/workflows/delete-old-releases.yml
+++ b/.github/workflows/delete-old-releases.yml
@@ -1,12 +1,7 @@
 name: Delete Old Releases
 on:
-  push:
-    branches:
-      - main
-
-  pull_request:
-    branches:
-      - main
+  release:
+    types: [published]
 
   workflow_dispatch:
 
