fix(workflows): fix index.rst.j2 and fix deploy github pages tigger action

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -36,3 +36,7 @@ jobs:
   build-documentation:
     needs: [update-bug-report-template, update-security]
     uses: attilasomogyi/github-actions-workflows/.github/workflows/build-documentation.yml@main
+
+  deploy-github-pages:
+    needs: build-documentation
+    uses: attilasomogyi/github-actions-workflows/.github/workflows/deploy-github-pages.yml@main
