--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
 
   workflow_call:
+    secrets:
+      ACCESS_TOKEN:
+        required: true
 
 permissions:
   contents: write
